# hs-zk-tool

./: LICENSE  README.md  zk-tool.cabal
src/: ZkTool.hs
